@@ -13,6 +13,8 @@ Monthday, Month DD, YYYY:
         "link-layer type plus other stuff" is non-zero.
     rpcap:
       Support user names and passwords in rpcap:// and rpcaps:// URLs.
+    Documentation:
+      Improve some protocol details in pcap-filter(7).
 
 Monthday, Month DD, YYYY:
   Summary for 1.10.2 libpcap release (so far!)
